# abductor

./: .gitignore  .zenodo.json  CITATION.cff  README.md  _diff-the-diff-design.md  pyproject.toml
.claude/skills/abduct/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/red-team/: SKILL.md
docs/: CLI.md  LINEAGE.md
examples/: repair-prompt.md
examples/even_squares/: README.md  bd_base.txt  bd_both.txt  bd_disagree.txt  bd_narrow.txt  bd_reference.txt  bd_wide.txt  cand_correct.txt
examples/leap_year/: README.md  inquiry.py  property.py  test_loop.py
src/abductor/: __init__.py  __main__.py  cli.py  hygraph.py  iblt.py  reduce.py
tests/: test_cli.py  test_reduce.py
