[project]
name = "abductor"
version = "1.0.0"
description = "Execution-gated abductive evaluation for LLM-driven program repair and verification"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "June Kim", email = "kimjune01@gmail.com" }]
dependencies = []

[project.scripts]
abductor = "abductor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abductor"]

[tool.ruff]
line-length = 100
